# blart

./: AGENTS.md  Cargo.toml  README.md  prompt.txt  prompt_tools.txt
.docs/initial/: implementation-plan.md  overview.md
src/: git.rs  main.rs  prompt.rs  tools.rs
src/client/: dto.rs  mod.rs
