[package]
name = "blart"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
clap = { version = "4.5.57", features = ["derive"] }
proptest = "1.10.0"
wiremock = "0.6.5"